# pv_self_cons

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
frontend/: mock.html
pv_self_cons/: __init__.py  app.py  calculate_stats.py  get_comsumption.py  get_consumption.py  get_pv_prod.py  helpers.py  plots.py  schemas.py
tests/unit/: test_get_consumption.py  test_get_pv_prod.py
