[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pv_self_cons"
version = "0.0.1"
description = "Estimate your PV self consumption."
license = {file = "LICENSE" }
authors = [
  { name = "Philipp Hilsheimer" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
